temps/parser_output/compiler.output
Nonterminals useless in grammar

    N_VARIABLE_DEFINITION
    N_DECLARATION_LIST


Rules useless in grammar

   70 N_DECLARATION_LIST: N_DECLARATION_LIST ',' T_IDENTIFIER
   71                   | T_IDENTIFIER


Grammar

    0 $accept: N_START $end

    1 N_START: N_DECLARATION T_TYPE T_MAIN_IDENTIFIER '(' ')' N_BLOCK

    2 N_CONSTANT_VALUE: T_INT_NUMBER
    3                 | T_FLOAT_NUMBER
    4                 | T_CHAR_VALUE
    5                 | T_BOOL_VALUE
    6                 | T_STRING_VALUE

    7 N_SYMBOL_ACCESS: N_NON_ARRAY_SYMBOL_ACCESS
    8                | N_ARRAY_SYMBOL_ACCESS

    9 N_NON_ARRAY_SYMBOL_ACCESS: N_SYMBOL_ACCESS M_PARAMETER_LOOKUP_SCOPE_CHANGE '(' N_PARAMETER ')'
   10                          | T_IDENTIFIER

   11 M_PARAMETER_LOOKUP_SCOPE_CHANGE: ε

   12 N_ARRAY_SYMBOL_ACCESS: N_NON_ARRAY_SYMBOL_ACCESS N_ARRAY_SUBSCRIPT

   13 $@1: ε

   14 N_VARIABLE_ACCESS: N_VARIABLE_ACCESS M_CLASS_ACCESS_SCOPE_CHANGE $@1 '.' N_SYMBOL_ACCESS
   15                  | N_SYMBOL_ACCESS

   16 M_CLASS_ACCESS_SCOPE_CHANGE: ε

   17 N_PARAMETER: N_PARAMETER_LIST
   18            | ε

   19 N_PARAMETER_LIST: N_PARAMETER_LIST ',' N_SYMBOL_ACCESS
   20                 | N_SYMBOL_ACCESS

   21 N_MIXED_TYPE: T_TYPE
   22             | T_IDENTIFIER

   23 N_EXPRESSION: N_EXPRESSION '+' N_EXPRESSION
   24             | N_EXPRESSION '-' N_EXPRESSION
   25             | N_EXPRESSION '*' N_EXPRESSION
   26             | N_EXPRESSION '/' N_EXPRESSION
   27             | '(' N_EXPRESSION ')'
   28             | '-' N_EXPRESSION
   29             | N_CONSTANT_VALUE
   30             | N_VARIABLE_ACCESS

   31 N_BOOL_EXPRESSION: N_BOOL_EXPRESSION T_BAND N_BOOL_EXPRESSION
   32                  | N_BOOL_EXPRESSION T_BOR N_BOOL_EXPRESSION
   33                  | '!' N_BOOL_EXPRESSION
   34                  | N_CONSTANT_VALUE
   35                  | N_VARIABLE_ACCESS

   36 N_DECLARATION: N_DECLARATION N_FUNCTION_DECLARATION ';'
   37              | N_DECLARATION N_BLOCK_SCOPE_DECLARATION ';'
   38              | N_DECLARATION error ';'
   39              | ε

   40 N_BLOCK_SCOPE_DECLARATION: N_CLASS_DECLARATION
   41                          | N_VARIABLE_DECLARATION

   42 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_IDENTIFIER
   43                       | N_MIXED_TYPE T_CONST T_IDENTIFIER
   44                       | N_MIXED_TYPE T_IDENTIFIER N_ARRAY_SUBSCRIPT
   45                       | N_MIXED_TYPE T_CONST T_IDENTIFIER N_ARRAY_SUBSCRIPT

   46 N_ARRAY_SUBSCRIPT: '[' T_INT_NUMBER ']' N_ARRAY_SUBSCRIPT
   47                  | '[' T_INT_NUMBER ']'

   48 N_CLASS_DECLARATION: T_CLASS T_IDENTIFIER '{' M_BLOCK_BEGIN N_DECLARATION '}'

   49 M_BLOCK_BEGIN: ε

   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')' N_BLOCK
   51                       | N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')'

   52 N_PARAMETER_DECLARATION: N_PARAMETER_DECLARATION_LIST
   53                        | ε

   54 N_PARAMETER_DECLARATION_LIST: N_PARAMETER_DECLARATION_LIST ',' N_MIXED_TYPE T_IDENTIFIER
   55                             | N_MIXED_TYPE T_IDENTIFIER

   56 N_BLOCK: '{' M_BLOCK_BEGIN N_STATEMENT '}'

   57 N_STATEMENT: N_STATEMENT N_ASSIGNMENT ';'
   58            | N_STATEMENT N_IF_STATEMENT
   59            | N_STATEMENT N_WHILE_STATEMENT
   60            | N_STATEMENT N_FOR_STATEMENT
   61            | N_STATEMENT N_EXPRESSION ';'
   62            | N_STATEMENT N_BLOCK_SCOPE_DECLARATION ';'
   63            | N_STATEMENT error ';'
   64            | N_STATEMENT N_BLOCK
   65            | ε

   66 N_ASSIGNMENT: N_VARIABLE_ACCESS '=' N_EXPRESSION

   67 N_IF_STATEMENT: T_IF '(' N_BOOL_EXPRESSION ')' N_BLOCK

   68 N_WHILE_STATEMENT: T_WHILE '(' N_BOOL_EXPRESSION ')' N_BLOCK

   69 N_FOR_STATEMENT: T_FOR '(' ',' ',' ')' N_BLOCK


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 33
    '(' (40) 1 9 27 50 51 67 68 69
    ')' (41) 1 9 27 50 51 67 68 69
    '*' (42) 25
    '+' (43) 23
    ',' (44) 19 54 69
    '-' (45) 24 28
    '.' (46) 14
    '/' (47) 26
    ';' (59) 36 37 38 57 61 62 63
    '=' (61) 66
    '[' (91) 46 47
    ']' (93) 46 47
    '{' (123) 48 56
    '}' (125) 48 56
    error (256) 38 63
    T_INT_NUMBER <intValue> (258) 2 46 47
    T_CHAR_VALUE <charValue> (259) 4
    T_FLOAT_NUMBER <floatValue> (260) 3
    T_BOOL_VALUE <boolValue> (261) 5
    T_STRING_VALUE <stringValue> (262) 6
    T_MAIN_IDENTIFIER (263) 1
    T_CLASS (264) 48
    T_IF (265) 67
    T_WHILE (266) 68
    T_FOR (267) 69
    T_CONST (268) 43 45
    T_TYPE <stringValue> (269) 1 21
    T_IDENTIFIER <stringValue> (270) 10 22 42 43 44 45 48 50 51 54 55
    T_BAND (271) 31
    T_BOR (272) 32
    UNOT (273)
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    N_START (36)
        on left: 1
        on right: 0
    N_CONSTANT_VALUE <intValue> (37)
        on left: 2 3 4 5 6
        on right: 29 34
    N_SYMBOL_ACCESS <pIdentifierLookup> (38)
        on left: 7 8
        on right: 9 14 15 19 20
    N_NON_ARRAY_SYMBOL_ACCESS <pIdentifierLookup> (39)
        on left: 9 10
        on right: 7 12
    M_PARAMETER_LOOKUP_SCOPE_CHANGE <pScope> (40)
        on left: 11
        on right: 9
    N_ARRAY_SYMBOL_ACCESS <pIdentifierLookup> (41)
        on left: 12
        on right: 8
    N_VARIABLE_ACCESS <pIdentifierLookup> (42)
        on left: 14 15
        on right: 14 30 35 66
    $@1 (43)
        on left: 13
        on right: 14
    M_CLASS_ACCESS_SCOPE_CHANGE <pScope> (44)
        on left: 16
        on right: 14
    N_PARAMETER <pSymbolList> (45)
        on left: 17 18
        on right: 9
    N_PARAMETER_LIST <pSymbolList> (46)
        on left: 19 20
        on right: 17 19
    N_MIXED_TYPE <stringValue> (47)
        on left: 21 22
        on right: 42 43 44 45 50 51 54 55
    N_EXPRESSION <intValue> (48)
        on left: 23 24 25 26 27 28 29 30
        on right: 23 24 25 26 27 28 61 66
    N_BOOL_EXPRESSION <boolValue> (49)
        on left: 31 32 33 34 35
        on right: 31 32 33 67 68
    N_DECLARATION <pScope> (50)
        on left: 36 37 38 39
        on right: 1 36 37 38 48
    N_BLOCK_SCOPE_DECLARATION <pScope> (51)
        on left: 40 41
        on right: 37 62
    N_VARIABLE_DECLARATION <pScope> (52)
        on left: 42 43 44 45
        on right: 41
    N_ARRAY_SUBSCRIPT <pArraytypePair> (53)
        on left: 46 47
        on right: 12 44 45 46
    N_CLASS_DECLARATION <pScope> (54)
        on left: 48
        on right: 40
    M_BLOCK_BEGIN <stringValue> (55)
        on left: 49
        on right: 48 56
    N_FUNCTION_DECLARATION <pScope> (56)
        on left: 50 51
        on right: 36
    N_PARAMETER_DECLARATION <pParamDeclarationList> (57)
        on left: 52 53
        on right: 50 51
    N_PARAMETER_DECLARATION_LIST <pParamDeclarationList> (58)
        on left: 54 55
        on right: 52 54
    N_BLOCK <pScope> (59)
        on left: 56
        on right: 1 50 64 67 68 69
    N_STATEMENT <stringValue> (60)
        on left: 57 58 59 60 61 62 63 64 65
        on right: 56 57 58 59 60 61 62 63 64
    N_ASSIGNMENT <stringValue> (61)
        on left: 66
        on right: 57
    N_IF_STATEMENT <stringValue> (62)
        on left: 67
        on right: 58
    N_WHILE_STATEMENT <stringValue> (63)
        on left: 68
        on right: 59
    N_FOR_STATEMENT <stringValue> (64)
        on left: 69
        on right: 60


State 0

    0 $accept: • N_START $end

    $default  reduce using rule 39 (N_DECLARATION)

    N_START        go to state 1
    N_DECLARATION  go to state 2


State 1

    0 $accept: N_START • $end

    $end  shift, and go to state 3


State 2

    1 N_START: N_DECLARATION • T_TYPE T_MAIN_IDENTIFIER '(' ')' N_BLOCK
   36 N_DECLARATION: N_DECLARATION • N_FUNCTION_DECLARATION ';'
   37              | N_DECLARATION • N_BLOCK_SCOPE_DECLARATION ';'
   38              | N_DECLARATION • error ';'

    error         shift, and go to state 4
    T_CLASS       shift, and go to state 5
    T_TYPE        shift, and go to state 6
    T_IDENTIFIER  shift, and go to state 7

    N_MIXED_TYPE               go to state 8
    N_BLOCK_SCOPE_DECLARATION  go to state 9
    N_VARIABLE_DECLARATION     go to state 10
    N_CLASS_DECLARATION        go to state 11
    N_FUNCTION_DECLARATION     go to state 12


State 3

    0 $accept: N_START $end •

    $default  accept


State 4

   38 N_DECLARATION: N_DECLARATION error • ';'

    ';'  shift, and go to state 13


State 5

   48 N_CLASS_DECLARATION: T_CLASS • T_IDENTIFIER '{' M_BLOCK_BEGIN N_DECLARATION '}'

    T_IDENTIFIER  shift, and go to state 14


State 6

    1 N_START: N_DECLARATION T_TYPE • T_MAIN_IDENTIFIER '(' ')' N_BLOCK
   21 N_MIXED_TYPE: T_TYPE •

    T_MAIN_IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 21 (N_MIXED_TYPE)


State 7

   22 N_MIXED_TYPE: T_IDENTIFIER •

    $default  reduce using rule 22 (N_MIXED_TYPE)


State 8

   42 N_VARIABLE_DECLARATION: N_MIXED_TYPE • T_IDENTIFIER
   43                       | N_MIXED_TYPE • T_CONST T_IDENTIFIER
   44                       | N_MIXED_TYPE • T_IDENTIFIER N_ARRAY_SUBSCRIPT
   45                       | N_MIXED_TYPE • T_CONST T_IDENTIFIER N_ARRAY_SUBSCRIPT
   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE • T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')' N_BLOCK
   51                       | N_MIXED_TYPE • T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')'

    T_CONST       shift, and go to state 16
    T_IDENTIFIER  shift, and go to state 17


State 9

   37 N_DECLARATION: N_DECLARATION N_BLOCK_SCOPE_DECLARATION • ';'

    ';'  shift, and go to state 18


State 10

   41 N_BLOCK_SCOPE_DECLARATION: N_VARIABLE_DECLARATION •

    $default  reduce using rule 41 (N_BLOCK_SCOPE_DECLARATION)


State 11

   40 N_BLOCK_SCOPE_DECLARATION: N_CLASS_DECLARATION •

    $default  reduce using rule 40 (N_BLOCK_SCOPE_DECLARATION)


State 12

   36 N_DECLARATION: N_DECLARATION N_FUNCTION_DECLARATION • ';'

    ';'  shift, and go to state 19


State 13

   38 N_DECLARATION: N_DECLARATION error ';' •

    $default  reduce using rule 38 (N_DECLARATION)


State 14

   48 N_CLASS_DECLARATION: T_CLASS T_IDENTIFIER • '{' M_BLOCK_BEGIN N_DECLARATION '}'

    '{'  shift, and go to state 20


State 15

    1 N_START: N_DECLARATION T_TYPE T_MAIN_IDENTIFIER • '(' ')' N_BLOCK

    '('  shift, and go to state 21


State 16

   43 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_CONST • T_IDENTIFIER
   45                       | N_MIXED_TYPE T_CONST • T_IDENTIFIER N_ARRAY_SUBSCRIPT

    T_IDENTIFIER  shift, and go to state 22


State 17

   42 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_IDENTIFIER •
   44                       | N_MIXED_TYPE T_IDENTIFIER • N_ARRAY_SUBSCRIPT
   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE T_IDENTIFIER • '(' N_PARAMETER_DECLARATION ')' N_BLOCK
   51                       | N_MIXED_TYPE T_IDENTIFIER • '(' N_PARAMETER_DECLARATION ')'

    '('  shift, and go to state 23
    '['  shift, and go to state 24

    $default  reduce using rule 42 (N_VARIABLE_DECLARATION)

    N_ARRAY_SUBSCRIPT  go to state 25


State 18

   37 N_DECLARATION: N_DECLARATION N_BLOCK_SCOPE_DECLARATION ';' •

    $default  reduce using rule 37 (N_DECLARATION)


State 19

   36 N_DECLARATION: N_DECLARATION N_FUNCTION_DECLARATION ';' •

    $default  reduce using rule 36 (N_DECLARATION)


State 20

   48 N_CLASS_DECLARATION: T_CLASS T_IDENTIFIER '{' • M_BLOCK_BEGIN N_DECLARATION '}'

    $default  reduce using rule 49 (M_BLOCK_BEGIN)

    M_BLOCK_BEGIN  go to state 26


State 21

    1 N_START: N_DECLARATION T_TYPE T_MAIN_IDENTIFIER '(' • ')' N_BLOCK

    ')'  shift, and go to state 27


State 22

   43 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_CONST T_IDENTIFIER •
   45                       | N_MIXED_TYPE T_CONST T_IDENTIFIER • N_ARRAY_SUBSCRIPT

    '['  shift, and go to state 24

    $default  reduce using rule 43 (N_VARIABLE_DECLARATION)

    N_ARRAY_SUBSCRIPT  go to state 28


State 23

   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE T_IDENTIFIER '(' • N_PARAMETER_DECLARATION ')' N_BLOCK
   51                       | N_MIXED_TYPE T_IDENTIFIER '(' • N_PARAMETER_DECLARATION ')'

    T_TYPE        shift, and go to state 29
    T_IDENTIFIER  shift, and go to state 7

    $default  reduce using rule 53 (N_PARAMETER_DECLARATION)

    N_MIXED_TYPE                  go to state 30
    N_PARAMETER_DECLARATION       go to state 31
    N_PARAMETER_DECLARATION_LIST  go to state 32


State 24

   46 N_ARRAY_SUBSCRIPT: '[' • T_INT_NUMBER ']' N_ARRAY_SUBSCRIPT
   47                  | '[' • T_INT_NUMBER ']'

    T_INT_NUMBER  shift, and go to state 33


State 25

   44 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_IDENTIFIER N_ARRAY_SUBSCRIPT •

    $default  reduce using rule 44 (N_VARIABLE_DECLARATION)


State 26

   48 N_CLASS_DECLARATION: T_CLASS T_IDENTIFIER '{' M_BLOCK_BEGIN • N_DECLARATION '}'

    $default  reduce using rule 39 (N_DECLARATION)

    N_DECLARATION  go to state 34


State 27

    1 N_START: N_DECLARATION T_TYPE T_MAIN_IDENTIFIER '(' ')' • N_BLOCK

    '{'  shift, and go to state 35

    N_BLOCK  go to state 36


State 28

   45 N_VARIABLE_DECLARATION: N_MIXED_TYPE T_CONST T_IDENTIFIER N_ARRAY_SUBSCRIPT •

    $default  reduce using rule 45 (N_VARIABLE_DECLARATION)


State 29

   21 N_MIXED_TYPE: T_TYPE •

    $default  reduce using rule 21 (N_MIXED_TYPE)


State 30

   55 N_PARAMETER_DECLARATION_LIST: N_MIXED_TYPE • T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 37


State 31

   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION • ')' N_BLOCK
   51                       | N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION • ')'

    ')'  shift, and go to state 38


State 32

   52 N_PARAMETER_DECLARATION: N_PARAMETER_DECLARATION_LIST •
   54 N_PARAMETER_DECLARATION_LIST: N_PARAMETER_DECLARATION_LIST • ',' N_MIXED_TYPE T_IDENTIFIER

    ','  shift, and go to state 39

    $default  reduce using rule 52 (N_PARAMETER_DECLARATION)


State 33

   46 N_ARRAY_SUBSCRIPT: '[' T_INT_NUMBER • ']' N_ARRAY_SUBSCRIPT
   47                  | '[' T_INT_NUMBER • ']'

    ']'  shift, and go to state 40


State 34

   36 N_DECLARATION: N_DECLARATION • N_FUNCTION_DECLARATION ';'
   37              | N_DECLARATION • N_BLOCK_SCOPE_DECLARATION ';'
   38              | N_DECLARATION • error ';'
   48 N_CLASS_DECLARATION: T_CLASS T_IDENTIFIER '{' M_BLOCK_BEGIN N_DECLARATION • '}'

    error         shift, and go to state 4
    T_CLASS       shift, and go to state 5
    T_TYPE        shift, and go to state 29
    T_IDENTIFIER  shift, and go to state 7
    '}'           shift, and go to state 41

    N_MIXED_TYPE               go to state 8
    N_BLOCK_SCOPE_DECLARATION  go to state 9
    N_VARIABLE_DECLARATION     go to state 10
    N_CLASS_DECLARATION        go to state 11
    N_FUNCTION_DECLARATION     go to state 12


State 35

   56 N_BLOCK: '{' • M_BLOCK_BEGIN N_STATEMENT '}'

    $default  reduce using rule 49 (M_BLOCK_BEGIN)

    M_BLOCK_BEGIN  go to state 42


State 36

    1 N_START: N_DECLARATION T_TYPE T_MAIN_IDENTIFIER '(' ')' N_BLOCK •

    $default  reduce using rule 1 (N_START)


State 37

   55 N_PARAMETER_DECLARATION_LIST: N_MIXED_TYPE T_IDENTIFIER •

    $default  reduce using rule 55 (N_PARAMETER_DECLARATION_LIST)


State 38

   50 N_FUNCTION_DECLARATION: N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')' • N_BLOCK
   51                       | N_MIXED_TYPE T_IDENTIFIER '(' N_PARAMETER_DECLARATION ')' •

    '{'  shift, and go to state 35

    $default  reduce using rule 51 (N_FUNCTION_DECLARATION)

    N_BLOCK  go to state 43


State 39

   54 N_PARAMETER_DECLARATION_LIST: N_PARAMETER_DECLARATION_LIST ',' • N_MIXED_TYPE T_IDENTIFIER
